Added Eulers problem1 solution to repo.

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
+#Created on: Nov 25, 2009 
+#Modified on: May 1, 2014
+
 #Solutions to Eulers problems(Link: http://projecteuler.net/index.php?section=problems)
